# gpu-png-to-jpeg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
compressor/: macro_block.cpp  macro_block.h
general/: colors.h  encoding.h
images/: image_storage_manager.cpp  image_storage_manager.h  image_storagge_manager.cpp  image_storagge_manager.h  raw_image.cpp  raw_image.h
